--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
 streamlit==1.25.0
-beautifulsoup4==4.12.2
-colorcet==3
-html5lib==1.1
-lxml==4.9.3
-matplotlib==3.7.1
-numpy==1.25.0
-pandas==2.0.2
-plotly==5.15.0
-seaborn==0.12.2
+matplotlib==3.8.0
+pandas==2.0.3
+numpy==1.23.0
+mplsoccer==1.1.6
